--- a/src/styles/blocks/sections/footer.scss
+++ b/src/styles/blocks/sections/footer.scss
@@ -1,9 +1,7 @@
 .footer-section{
-    margin-top: 5rem;
-    margin-left: 13.25rem;
-    margin-bottom: 5rem ;
     display: flex;
     gap: 16rem;
+    justify-content: space-between;
     &__wrapper{
         display: flex;
         flex-direction: column;
@@ -110,6 +108,7 @@
                 display: flex;
                 gap: 1.5rem;
                 align-items: end;
+                
                 p{
                     @include text_3;
                     margin-bottom: 0;
@@ -120,6 +119,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 0.5rem;
+                text-wrap: nowrap;
                 p{
                     @include text_3;
                     margin-bottom: 0;
