--- a/src/styles/blocks/ui/kit/elements/buttons.scss
+++ b/src/styles/blocks/ui/kit/elements/buttons.scss
@@ -21,21 +21,32 @@
                 padding: 1rem 1.25rem;
             }
         }
-        &_icon{
+        &_small {
+            padding: 0.5rem 1rem;
+            @include button_2;
+            @include mobile {
+                padding: 0.25rem 0.75rem;
+            }
+        }
+        &_icon {
             padding: 1rem;
             display: flex;
             align-items: center;
             justify-content: center;
-            img{
+            img {
                 @include image_settings(contain);
                 width: 2.5rem;
                 height: 2.5rem;
             }
-            &_small {
-                padding: 0.5rem 1rem;
-                @include button_2;
-                @include mobile {
-                    padding: 0.25rem 0.75rem;
+            &-small {
+                padding: 0.5rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                img {
+                    @include image_settings(contain);
+                    width: 2rem;
+                    height: 2rem;
                 }
             }
         }
@@ -94,20 +105,32 @@
                 background-color: $border-primary-transparent-3;
                 color: $text-primary-transparent-15;
             }
-            &-subdued{
+            &-subdued {
                 background: none;
-                &::hover{
+                &:hover {
                     background-color: $bg-inverse-transparent-6;
                 }
-                &::active{
-                    background-color:$bg-accent;
+                &:active {
+                    background-color: $bg-accent;
                 }
-                &:disabled{
+                &:disabled {
                     background-color: $bg-inverse-transparent-6;
-                    img{
+                    img {
                         filter: grayscale(1);
                         opacity: 0.15;
                     }
+                }
+            }
+        }
+        &_gray {
+            background-color: $bg-inverse-transparent-6;
+            &:hover {
+                background-color: $bg-accent;
+            }
+            &:active {
+                background-color: $bg-inverse;
+                img {
+                    filter: invert(1);
                 }
             }
         }
