--- a/src/styles/blocks/ui/kit/components/burger.scss
+++ b/src/styles/blocks/ui/kit/components/burger.scss
@@ -6,6 +6,7 @@
     opacity: 0;
     visibility: hidden;
     transition: all .3s;
+    bottom: -24.16rem;
     @include mobile{
         width: 100vw;
         height: 100vh;
