--- a/templates/index.html
+++ b/templates/index.html
@@ -75,16 +75,16 @@
                             <li><a href="#">Акции</a></li>
                             <li><a href="#">Бренды</a></li>
                         </ul>
-                        <ul>
+                        <ul class="burger-block__burger__links__help">
                           <li><a href="#">Помощь</a></li>
                         </ul>
                     </div>
-                    <div class="burger-block__burder__contact-us">
-                        <div class="burger-block__burder__contact-us__phone-socials">
-                            <div class="burger-block__burder__contact-us__phone-socials__phone">
+                    <div class="burger-block__burger__contact-us">
+                        <div class="burger-block__burger__contact-us__phone-socials">
+                            <div class="burger-block__burger__contact-us__phone-socials__phone">
                                 <a href="tel:8(800) 250-61-68">8(800) 250-61-68</a>
                             </div>
-                            <div class="burger-block__burder__contact-us__phone-socials__socials">
+                            <div class="burger-block__burger__contact-us__phone-socials__socials">
                                 <a href="#" class="button button_size_icon-small button_style_gray"><img src="../src/images/vk.png" alt=""></a>
                                 <a href="#" class="button button_size_icon-small button_style_gray"><img src="../src/images/tg.png" alt=""></a>
                                 <a href="#" class="button button_size_icon-small button_style_gray"><img src="../src/images/yt.png" alt=""></a>
