--- a/src/styles/blocks/ui/kit/components/burger.scss
+++ b/src/styles/blocks/ui/kit/components/burger.scss
@@ -1,45 +1,123 @@
-.burger-block{
-    position: absolute;
-    background-color: $bg-primary;
-    width: 35rem;
-    z-index: 5;
-    opacity: 0;
-    visibility: hidden;
-    transition: all .3s;
-    bottom: -24.16rem;
-    @include mobile{
-        width: 100vw;
-        height: 100vh;
+.burger-block {
+  position: absolute;
+  background-color: $bg-primary;
+  width: 35rem;
+  z-index: 5;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+  height: 58rem;
+  border-radius: 0 0 1.75rem 1.75rem;
+  @include mobile {
+    width: 100vw;
+    height: 100vh;
+  }
+  &__burger {
+    overflow-y: auto;
+    max-width: 35rem;
+    &__links {
+      margin: 0;
+      text-decoration: none;
+      display: flex;
+      padding-left: 1.75rem;
+      flex-direction: column;
+      padding-top: 1.75rem;
+      ul {
+        padding-left: 0;
+        margin: 0;
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        gap: 1.25rem;
+        a {
+          display: flex;
+          flex-direction: column;
+          color: $text-primary;
+          @include text_1;
+        }
+      }
+      &__help {
+        margin: 0;
+        padding-top: 3.5rem;
+        padding-bottom: 5rem;
+      }
     }
-    &__burger{
-        overflow-y: auto;
+    &__contact-us {
+      display: flex;
+      flex-direction: column;
+      gap: 1.75rem;
+      &__phone-socials {
+        display: flex;
+        flex-direction: column;
+        gap: 1.75rem;
+        &__phone {
+          a {
+            
+            text-decoration: none;
+            color: $text-primary;
+            padding-left: 1.75rem;
+            font-size: 1.3rem;
+          }
+        }
+        &__socials {
+          display: flex;
+          flex-direction: row;
+          gap: 1.5rem;
+          padding-left: 1.75rem;
+          width: 13.5rem;
+        }
+      }
+      &__politics {
+        display: flex;
+        flex-direction: column;
+        padding-left: 1.75rem;
+        @include text_3;
+        gap:1rem ;
+         a {
+            text-decoration: none;
+            color: $text-primary-transparent-60;
+        }
+      }
+      &__descriptions{
+        display: flex;
+        flex-direction: column;
+        padding-left: 1.75rem;
+        gap: 0.5rem;
+        @include text_3;
+        color: $text-primary-transparent-30;
+         a{
+            text-decoration: none;
+            color: $text-primary-transparent-30;
+        }
+      }
     }
+  }
 }
 
-.insert{
-    width: 100vw;
-    height: 100vw;
-    position: fixed;
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.3s;
-    visibility: hidden;
-    top: 0;
-    left: 0;
-    z-index: 4;
-    &.active{
-        opacity:1;
-        visibility: visible;
-        background-color: $bg-inverse-transparent-30;
-    }
+.insert {
+  width: 100vw;
+  height: 100vw;
+  position: fixed;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+  visibility: hidden;
+  top: 0;
+  left: 0;
+  z-index: 4;
+  &.active {
+    opacity: 1;
+    visibility: visible;
+    background-color: $bg-inverse-transparent-30;
+  }
 }
 
 body.open-menu {
-    @include mobile{
-        overflow: hidden;
-    }
-    .burger-block{
-        opacity: 1;
-        visibility: visible;
-    }
+  @include mobile {
+    overflow: hidden;
+  }
+  .burger-block {
+    opacity: 1;
+    visibility: visible;
+  }
 }
