--- a/src/styles/blocks/sections/brands.scss
+++ b/src/styles/blocks/sections/brands.scss
@@ -1,16 +1,18 @@
 .brands-section {
   position: relative;
-  &__slider {
-    grid-column: 2/5;
-    position: relative;
-    .swiper {
-      .swiper-wrapper {
-        .swiper-slide {
-          color: $bg-primary;
-          border-radius: 1rem;
-          overflow: hidden;
-          img {
-            @include image_settings(contain);
+  &_container{
+    &__slider {
+      grid-column: 2/5;
+      position: relative;
+      .swiper {
+        .swiper-wrapper {
+          .swiper-slide {
+            color: $bg-primary;
+            border-radius: 1rem;
+            overflow: hidden;
+            img {
+              @include image_settings(contain);
+            }
           }
         }
       }
@@ -18,6 +20,9 @@
   }
 }
 .button {
+  @include mobile{
+    display: none;
+  }
   &.prev,
   &.next {
     position: absolute;
