--- a/src/styles/blocks/sections/footer.scss
+++ b/src/styles/blocks/sections/footer.scss
@@ -6,9 +6,13 @@
   max-width: 143.5rem;
   margin: 0 auto;
   border-radius: 1.5rem 1.5rem 0 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box; 
   box-sizing: border-box;
+
+  @include mobile{
+    flex-direction: column;
+    padding: 1.25rem;
+  }
+
   &__wrapper {
     display: flex;
     flex-direction: column;
@@ -36,12 +40,32 @@
       max-height: 15rem;
       border: 1px solid $border-primary-transparent-15;
       margin-bottom: 2.5rem;
+      border-radius: 1rem;
+
+      @include mobile{
+        flex-direction: column;
+        padding: 2rem;
+        max-height: auto;
+        height: 100%;
+        gap: 2rem;
+      }
+      &__button{
+        display: none;
+        width: 100%;
+
+        @include mobile{
+          display: block;
+        }
+      }
       img {
         margin-bottom: 2.5rem;
         margin-top: 2.5rem;
         margin-left: 2.5rem;
         max-width: 10rem;
         max-height: 10rem;
+        @include mobile{
+          display: none;
+        }
       }
       &__information {
         display: flex;
@@ -67,6 +91,11 @@
       gap: 1.25rem;
       width: 11.5rem;
       height: 3rem;
+      &__image-wrapper{
+        background-color: $bg-inverse-transparent-6;
+        border-radius: 0.5rem;
+      }
+
       img {
         height: 3rem;
         width: 3rem;
@@ -82,6 +111,10 @@
     justify-content: space-between;
     &__top {
       display: flex;
+
+      @include mobile{
+        flex-direction: column;
+      }
       &__categories {
         display: flex;
         flex-direction: column;
@@ -90,6 +123,11 @@
           display: flex;
           flex-direction: column;
           gap: 1.25rem;
+
+          @include mobile{
+            padding-left: 0;
+            margin-top: 3rem;
+          }
 
           cursor: pointer;
           &__heading {
@@ -109,6 +147,15 @@
       margin-top: 18.8333rem;
       display: flex;
       gap: 18.9167rem;
+
+      @include mobile{
+        margin-top: 3rem;
+        gap: 1.2rem;
+      }
+
+      @include mobile{
+        flex-direction: column;
+      }
       &__rules {
         display: flex;
         gap: 1.5rem;
@@ -125,9 +172,14 @@
         flex-direction: column;
         gap: 0.5rem;
         text-wrap: nowrap;
+
         p {
           @include text_3;
           margin-bottom: 0;
+          
+          @include mobile{
+            margin-top: 0;
+          }
           color: $text-primary-transparent-30;
         }
       }
