--- a/src/styles/blocks/ui/kit/components/product-card.scss
+++ b/src/styles/blocks/ui/kit/components/product-card.scss
@@ -47,12 +47,20 @@
         flex-direction: column;
         display: flex;
         gap: 1rem;
+        @include mobile{
+            padding: 0 0.25rem;
+            gap: 0.75rem;
+        }
         &__price-block {
             display: flex;
             gap: 1rem;
             align-items: center;
+            @include mobile{
+                gap: 0.75rem;
+            }
             &__price{
                 @include button_1;
+              
             }
             &__cashback {
                 display: flex;
