--- a/src/styles/blocks/sections/new-product.scss
+++ b/src/styles/blocks/sections/new-product.scss
@@ -9,7 +9,9 @@
         display: flex;
         align-items:center;
         justify-content: space-between; 
-       
+        @include mobile{
+            padding-bottom: 3rem;
+        } 
         &__title{
             @include heading_2;
         }
@@ -28,6 +30,7 @@
             flex-direction: column;
             flex-wrap: nowrap;
             @include grid(2, 1.75rem);
+            gap: 1.25rem ;
         }
     }
 }
