the project has been transferred to npm

--- a/src/components/TheHeader.hbs
+++ b/src/components/TheHeader.hbs
@@ -20,7 +20,7 @@
 							<input type="text">
 						</div>
 					</div>
-					<a class="button button_size_icon button_style_outline search-mobile" href="#"><img
+					<a class="button button_size_icon button_style_outline search-mobile" href="./page2.html"><img
 						src="/images/search.svg" alt=""></a>
 					<div class="header-section__info-block__item__item header-section__info-block__item__add">
 						<a href="" class="header-section__info-block__item__add__link">
