--- a/src/components/TheTop.hbs
+++ b/src/components/TheTop.hbs
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8"/>
 	<meta name="viewport"
 	      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-	<title>Мега Хенд</title>
+	<title>Мега Хенд | {{ title }}</title>
 	<link rel="stylesheet" href="./src/styles/swiper.css"/>
 	<link rel="stylesheet" href="./src/styles/main.scss"/>
 </head>
