--- a/src/styles/blocks/ui/kit/components/product-card.scss
+++ b/src/styles/blocks/ui/kit/components/product-card.scss
@@ -22,6 +22,12 @@
     margin-bottom: -10rem;
     transform: translateY(-2rem);
     box-shadow: 0 0 9px 0 rgba(56, 56, 26, 0.2);
+    @include mobile {
+      padding: 0;
+      margin-bottom: 0;
+      transform: translateY(0);
+      box-shadow: none;
+    }
 
     .product-card__buttons {
       visibility: visible;
@@ -100,9 +106,8 @@
         }
 
         img {
-          width: 1.5rem;
-          height: 1.5rem;
-          @include image_settings(contain);
+          width: 2rem;
+          height: 2rem;
         }
 
         span {
@@ -166,7 +171,7 @@
     gap: 1rem;
     padding: 0 1.75rem;
     visibility: hidden;
-    max-height: 0;
+    height: 4.5rem;
     overflow: hidden;
     opacity: 0;
     transition: all 0.3s;
